# attack-hierarchy-for-llm

./: .bandit  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-tests  LICENSE  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/attack_hierarchy/: __init__.py  __main__.py  cli.py  markdown_generator.py  models.py  stix_parser.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md  minimal-attack.json
tests/integration/: __init__.py  test_workflows.py
tests/unit/: test_cli.py  test_core.py  test_edge_cases.py  test_markdown_generator.py  test_models.py
